# Surge

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini  premake5.lua
Editor/: CMakeLists.txt
Editor/Source/: Editor.cpp  Editor.hpp  ProjectBrowser.cpp  ProjectBrowser.hpp
Editor/Source/Panels/: IPanel.hpp  InspectorPanel.cpp  InspectorPanel.hpp  PaneManager.hpp  PanelCode.hpp  PerformancePanel.cpp  PerformancePanel.hpp  ProjectSettingsPanel.cpp  ProjectSettingsPanel.hpp  RenderProcedurePanel.cpp  RenderProcedurePanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp  Titlebar.cpp  Titlebar.hpp  ViewportPanel.cpp  ViewportPanel.hpp
Editor/Source/Utility/: ImGuiAux.cpp  ImGuiAux.hpp
Engine/: CMakeLists.txt  premake5.lua
Engine/Assets/Mesh/: Cube.fbx
Engine/Assets/Scenes/: Default.surge  Test.surge
Engine/Assets/Shaders/: LightCulling.glsl  PBR.glsl  PreDepth.glsl  ShadowMap.glsl  Simple.glsl
Engine/Assets/Temp/ShaderCache/: LightCulling.glsl.Compute.spv  PBR.glsl.Pixel.spv  PBR.glsl.Vertex.spv  PreDepth.glsl.Pixel.spv  PreDepth.glsl.Vertex.spv  ShaderHash.txt  ShadowMap.glsl.Vertex.spv  Simple.glsl.Pixel.spv  Simple.glsl.Vertex.spv
Engine/Assets/Textures/: SurgeLogo.fig
Engine/Source/: Defines.hpp  Pch.cpp  Pch.hpp  Surge.hpp  Test.cpp  Test.hpp
Engine/Source/Core/: Application.hpp  Clock.hpp  Core.cpp  Core.hpp  Defines.hpp  Input.hpp  KeyCodes.hpp  Logger.hpp  MouseCodes.hpp  Plugin.cpp  Plugin.hpp  ThreadPool.cpp  ThreadPool.hpp  Window.cpp  Window.hpp
Engine/Source/Platform/Win32/: Win32Input.cpp  Win32Plugin.cpp  Win32Plugin.hpp  Win32Window.cpp  Win32Window.hpp
Engine/Source/Surge/: Pch.hpp  Surge.hpp
Engine/Source/Surge/Core/: Application.hpp  Buffer.hpp  Client.hpp  Core.cpp  Core.hpp  Defines.hpp  Hash.hpp  Memory.hpp  Path.hpp  Process.cpp  Process.hpp  String.hpp  UUID.cpp  UUID.hpp
Engine/Source/Surge/Core/Events/: Event.hpp
Engine/Source/Surge/Core/Input/: Input.hpp  KeyCodes.hpp  MouseCodes.hpp
Engine/Source/Surge/Core/Logger/: Logger.hpp
Engine/Source/Surge/Core/Project/: Project.cpp  Project.hpp
Engine/Source/Surge/Core/Thread/: ThreadPool.cpp  ThreadPool.hpp
Engine/Source/Surge/Core/Time/: Clock.cpp  Clock.hpp  Timer.hpp
Engine/Source/Surge/Core/Window/: Window.cpp  Window.hpp
Engine/Source/Surge/Debug/: Profiler.hpp
Engine/Source/Surge/ECS/: Components.cpp  Components.hpp  Scene.cpp  Scene.hpp
Engine/Source/Surge/Events/: Event.hpp  EventDispatcher.hpp
Engine/Source/Surge/Graphics/: AABB.hpp  Buffer.cpp  Buffer.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  ReflectionData.cpp  ReflectionData.hpp  RenderCommandBuffer.cpp  RenderCommandBuffer.hpp  RenderContext.cpp  RenderContext.hpp  Renderer.cpp  Renderer.hpp  RendererBase.cpp  RendererBase.hpp  Shader.cpp  Shader.hpp  ShaderReflector.cpp  ShaderReflector.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Engine/Source/Surge/Graphics/Abstraction/: RenderContext.cpp  RenderContext.hpp
Engine/Source/Surge/Graphics/Abstraction/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanComputePipeline.cpp  VulkanComputePipeline.hpp  VulkanDescriptorSet.cpp  VulkanDescriptorSet.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanDiagnostics.cpp  VulkanDiagnostics.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.hpp  VulkanImGuiContext.cpp  VulkanImGuiContext.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanIndexBuffer.cpp  VulkanIndexBuffer.hpp  VulkanMaterial.cpp  VulkanMaterial.hpp  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.hpp  VulkanRenderer.cpp  (+19 more)
Engine/Source/Surge/Graphics/Camera/: Camera.hpp  EditorCamera.cpp  EditorCamera.hpp  RuntimeCamera.hpp
Engine/Source/Surge/Graphics/Interface/: ComputePipeline.cpp  ComputePipeline.hpp  DescriptorSet.cpp  DescriptorSet.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  IndexBuffer.cpp  IndexBuffer.hpp  RenderCommandBuffer.cpp  RenderCommandBuffer.hpp  StorageBuffer.cpp  StorageBuffer.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Engine/Source/Surge/Graphics/RenderProcedure/: GeometryProcedure.cpp  GeometryProcedure.hpp  LightCullingProcedure.cpp  LightCullingProcedure.hpp  PreDepthProcedure.cpp  PreDepthProcedure.hpp  RenderProcedure.hpp  RenderProcedureManager.cpp  RenderProcedureManager.hpp  ShadowMapProcedure.cpp  ShadowMapProcedure.hpp
Engine/Source/Surge/Graphics/Renderer/: Lights.hpp  Renderer.cpp  Renderer.hpp
Engine/Source/Surge/Graphics/Shader/: ReflectionData.cpp  ReflectionData.hpp  Shader.cpp  Shader.hpp  ShaderReflector.cpp  ShaderReflector.hpp  ShaderSet.cpp  ShaderSet.hpp
Engine/Source/Surge/Platform/Windows/: FileDialogs.cpp  Filesystem.cpp  WindowsFilesystem.cpp  WindowsInput.cpp  WindowsPlatform.cpp  WindowsPlatformMisc.cpp  WindowsWindow.cpp  WindowsWindow.hpp
Engine/Source/Surge/Project/: Project.cpp  Project.hpp
Engine/Source/Surge/Renderer/: Device.cpp  Device.h  Renderer.cpp  Renderer.hpp
Engine/Source/Surge/Renderer/Vulkan/: VulkanDevice.cpp  VulkanDevice.hpp
Engine/Source/Surge/Scripting/: ScriptEngine.cpp  ScriptEngine.hpp  SurgeBehaviour.hpp
Engine/Source/Surge/Scripting/Compiler/: CompilerMSVC.cpp  CompilerMSVC.hpp  ScriptCompiler.cpp  ScriptCompiler.hpp
Engine/Source/Surge/Serializer/: Serializer.cpp  Serializer.hpp
Engine/Source/Surge/Utility/: FileDialogs.hpp  Filesystem.hpp  ImGuiUtils.cpp  ImGuiUtils.hpp  Platform.hpp  PlatformMisc.hpp
Engine/Source/SurgeMath/: AABB.hpp  Math.hpp
Engine/Source/SurgeReflect/: CMakeLists.txt
Engine/Source/SurgeReflect/Include/SurgeReflect/: Class.hpp  SurgeReflect.hpp  SurgeReflectRegistry.hpp  Type.hpp  Utility.hpp
Engine/Source/SurgeReflect/Source/: SurgeReflectRegistry.cpp
Sandbox/: CMakeLists.txt  premake5.lua
Sandbox/Source/: main.cpp
(+4 files in other folders)
